project/stage/testing/lexical/parse_tests/tests/reject/bad_statements/bad_func_calls/extra_comma.ul
void main() {
    call (1, 2,);
}
